--- a/index-2.html
+++ b/index-2.html
@@ -688,22 +688,333 @@
 		</div>
 	</section>			
 <!-- End of Testimonial section
-	============================================= -->	
+	============================================= -->
+
+<!-- Start of Blog section
+	============================================= -->
+	<section id="vt-blog-2" class="vt-blog-section-2 pt-120 pb-120">
+		<div class="container">
+			<div class="vt-section-title ver_2 headline pera-content">
+				<div class="subtitle">
+					News &amp; Blogs
+				</div>
+				<h2 class="section_title">Press Releases Drive Success</h2>
+			</div>
+			<div class="vt-blog-content pt-50 justify-content-center">
+				<div class="row justify-content-center">
+					<div class="col-lg-4 col-md-6">
+						<div class="vt-blog-item ver_2">
+							<div class="item-img-meta position-relative">
+								<div class="item-img">
+									<img src="assets/img/blog/blg4.jpg" alt="">
+								</div>
+								<div class="item-tag">
+									<a href="#"><span>Corporate News</span></a>
+									<a href="#"><span>July 22, 2024</span></a>
+								</div>
+							</div>
+							<div class="item-text headline">
+								<h3 class="blog_title href-underline"><a href="#">Global Corporation Achieves Record-Breaking Quarterly Profits</a></h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="vt-blog-item ver_2">
+							<div class="item-img-meta position-relative">
+								<div class="item-img">
+									<img src="assets/img/blog/blg5.jpg" alt="">
+								</div>
+								<div class="item-tag">
+									<a href="#"><span>Business News</span></a>
+									<a href="#"><span>July 22, 2024</span></a>
+								</div>
+							</div>
+							<div class="item-text headline">
+								<h3 class="blog_title href-underline"><a href="#">Innovative Startups Transforming Corporate Business Landscape</a></h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="vt-blog-item ver_2">
+							<div class="item-img-meta position-relative">
+								<div class="item-img">
+									<img src="assets/img/blog/blg6.jpg" alt="">
+								</div>
+								<div class="item-tag">
+									<a href="#"><span>News</span></a>
+									<a href="#"><span>July 22, 2024</span></a>
+								</div>
+							</div>
+							<div class="item-text headline">
+								<h3 class="blog_title href-underline"><a href="#">Leading Firm Expands Operations into New Markets</a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="vt-btn mt-15 text-capitalize text-center">
+					<a href="#">Browse All News</a>
+				</div>
+			</div>
+		</div>
+	</section>		
+<!-- End of Blog section
+	============================================= -->
+
+
+<!-- Start of Faq  section
+	============================================= -->
+	<section id="vt-faq" class="vt-faq-section pt-120 pb-120 position-relative">
+		<div class="container">
+			<div class="vt-section-title headline text-center pera-content">
+				<div class="subtitle">
+					Frequently Asked Questions
+				</div>
+				<h2 class="section_title">Answers to Common Corporate Business Questions</h2>
+			</div>
+			<div class="vt-faq-content">
+				<div class="vt-faq-item-area">
+					<div class="accordion" id="accordionExample_31">
+						<div class="accordion-item faq_active wow fadeInUp"  data-wow-delay="200ms" data-wow-duration="1000ms">
+							<h2 class="accordion-header" id="heading10">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="true" aria-controls="collapse10">
+									<span>	What is corporate business?</span>
+								</button>
+							</h2>
+							<div id="collapse10" class="accordion-collapse collapse show" aria-labelledby="heading10" data-bs-parent="#accordionExample_31">
+								<div class="accordion-body ">
+									<div class="bi-faq-text">
+										Corporate business refers to large-scale operations involving multiple stakeholders and structured governance for achieving specific business goals.
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item wow fadeInUp"  data-wow-delay="300ms" data-wow-duration="1000ms">
+							<h2 class="accordion-header" id="heading12">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse12" aria-expanded="false" aria-controls="collapse12">
+									<span>How do corporate businesses differ from small businesses?</span>
+								</button>
+							</h2>
+							<div id="collapse12" class="accordion-collapse collapse" aria-labelledby="heading12" data-bs-parent="#accordionExample_31">
+								<div class="accordion-body ">
+									<div class="bi-faq-text">
+										Corporate business refers to large-scale operations involving multiple stakeholders and structured governance for achieving specific business goals.
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item wow fadeInUp"  data-wow-delay="400ms" data-wow-duration="1000ms">
+							<h2 class="accordion-header" id="heading13">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">
+									<span>What are the key benefits of forming a corporate entity?</span>
+								</button>
+							</h2>
+							<div id="collapse13" class="accordion-collapse collapse" aria-labelledby="heading13" data-bs-parent="#accordionExample_31">
+								<div class="accordion-body ">
+									<div class="bi-faq-text">
+										Corporate business refers to large-scale operations involving multiple stakeholders and structured governance for achieving specific business goals.
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
+							<h2 class="accordion-header" id="heading14">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14">
+									<span>How can corporate businesses ensure sustainability?</span>
+								</button>
+							</h2>
+							<div id="collapse14" class="accordion-collapse collapse" aria-labelledby="heading14" data-bs-parent="#accordionExample_31">
+								<div class="accordion-body ">
+									<div class="bi-faq-text">
+										Corporate business refers to large-scale operations involving multiple stakeholders and structured governance for achieving specific business goals.
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item wow fadeInUp"  data-wow-delay="200ms" data-wow-duration="1000ms">
+							<h2 class="accordion-header" id="heading87">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse87" aria-expanded="true" aria-controls="collapse87">
+									<span>	What challenges do corporate businesses commonly face?</span>
+								</button>
+							</h2>
+							<div id="collapse87" class="accordion-collapse collapse" aria-labelledby="heading87" data-bs-parent="#accordionExample_31">
+								<div class="accordion-body ">
+									<div class="bi-faq-text">
+										Corporate business refers to large-scale operations involving multiple stakeholders and structured governance for achieving specific business goals.
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="vt-faq-bottom mt-50 text-center pera-content">
+					<p>Don't see your question? Jump in our Slack!</p>
+					<div class="vt-btn mt-20 text-capitalize text-center">
+						<a href="#">Get in Touch</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>		
+<!-- End of Faq  section
+	============================================= -->
+
+<!-- Start of Contact  section
+	============================================= -->
+	<section id="vt-contact" class="vt-contact-section pt-120 pb-120 position-relative">
+		<div class="contact-pattern position-absolute">
+			<img src="assets/img/bg/pattern.png" alt="">
+		</div>
+		<div class="container">
+			<div class="vt-contact-content d-flex">
+				<div class="vt-contact-text-wrap">
+					<div class="vt-section-title headline pera-content">
+						<div class="subtitle">
+							Contact Us
+						</div>
+						<h2 class="section_title">Get in Touch with Us Today</h2>
+						<p>Our consulting services drive growth, optimize operations, and ensure strategic business success.</p>
+					</div>
+					<div class="vt-contact-partner pera-content">
+						<p>Used by leading brands and companies across the globe</p>
+						<div class="vt-contact-logo">
+							<div class="vt-contact-logo-slide swiper-container">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp8.png" alt="">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp3.png" alt="">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp4.png" alt="">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp2.png" alt="">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp1.png" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="vt-contact-form headline pera-content">
+					<h3 class="wow" data-splitting="" >What can we help you with? </h3>
+					<div class="vt-contact-form-area">
+						<form action="#" method="post">
+							<div class="vt-contact-form-option">
+								<label class="contact-select">
+									<input type="radio" id="age1" name="age" value="">
+									<span>Strategic Planning</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age2" name="age" value="">
+									<span>Financial Consulting</span>
+								</label> 
+								<label class="contact-select">
+									<input type="radio" id="age3" name="age" value="">
+									<span>Operational Optimization</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age4" name="age" value="">
+									<span>HR Development</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age5" name="age" value="">
+									<span>Marketing Strategy</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age6" name="age" value="">
+									<span>Technology Integration</span>
+								</label>
+							</div>
+							<div class="vt-contact-form-input">
+								<div class="input-field">
+									<label class="text-uppercase">Name</label>
+									<input type="text" placeholder="e.g. Oliver Spiteri">
+								</div>
+								<div class="input-field">
+									<label class="text-uppercase">Phone</label>
+									<input type="text" placeholder="e.g. +1 877 217 8371">
+								</div>
+								<div class="input-field">
+									<label class="text-uppercase">Email</label>
+									<input type="text" placeholder="example@email.com">
+								</div>
+								<div class="input-field">
+									<label class="text-uppercase">Message</label>
+									<textarea name="message" id="text" placeholder="Write your message here..."></textarea>
+								</div>
+							</div>
+							<button>Submit NOw</button>
+						</form>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>		
+<!-- End of Contact  section
+	============================================= -->
+
+<!-- Start of Get in touch  section
+	============================================= -->
+	<section id="vt-get-in-touch" class="vt-get-in-touch-section" data-background="assets/img/bg/get-bg.png">
+		<div class="container">
+			<div class="vt-section-title headline text-center pera-content">
+				<div class="subtitle">
+					Get in Touch
+				</div>
+				<h2 class="section_title">Interested in working together?</h2>
+			</div>
+			<div class="vt-get-in-touch-content d-flex justify-content-center text-center flex-wrap">
+				<div class="vt-get-in-touch-item headline pera-content">
+					<h3>Address:</h3>
+					<p>327 Park Ave S,
+					New York, NY 10010</p>
+				</div>
+				<div class="vt-get-in-touch-item headline pera-content">
+					<h3>Hours:</h3>
+					<p>Mon-Fri: 9 AM to 5 PM
+					Sun: Closed</p>
+				</div>
+				<div class="vt-get-in-touch-item headline pera-content">
+					<h3>Phone:</h3>
+					<p>+1 917 265 8444</p>
+				</div>
+			</div>
+			<div class="vt-btn mt-35 text-capitalize text-center">
+				<a href="#">Free Consultation</a>
+			</div>
+		</div>
+	</section>		
+<!-- End of Get in touch  section
+	============================================= -->		
 
 
 <!-- Start of footer  section
 	============================================= -->
-	<footer id="vt-footer" class="vt-footer-section position-relative">
-		<span class="vt-footer-shape position-absolute"><img src="assets/img/shape/logo_shape.svg" alt=""></span>
+	<footer id="vt-footer" class="vt-footer-section position-relative dark_version">
+		<span class="vt-footer-shape position-absolute"><img src="assets/img/shape/logo_shape_2.svg" alt=""></span>
 		<div class="container">
 			<div class="vt-footer-content position-relative">
 				<div class="vt-footer-widget-area pt-120 pb-80 d-flex">
 					<div class="vt-footer-widget headline ul-li-block">
 						<div class="logo-widget">
-							<a href="#"><img src="assets/img/logo/logo-1.svg" alt=""></a>
+							<a href="#"><img src="assets/img/logo/logo-2.svg" alt=""></a>
 						</div>
 					</div>
-					<div class="vt-footer-widget headline ul-li-block">
+					<div class="vt-footer-widget white_color headline ul-li-block">
 						<div class="menu-widget">
 							<h3 class="widget-title text-uppercase">Useful Pages</h3>
 							<ul>
@@ -715,7 +1026,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="vt-footer-widget headline ul-li-block">
+					<div class="vt-footer-widget white_color headline ul-li-block">
 						<div class="menu-widget">
 							<h3 class="widget-title text-uppercase">Our Services</h3>
 							<ul>
@@ -728,7 +1039,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="vt-footer-widget headline">
+					<div class="vt-footer-widget white_color headline">
 						<div class="cta-widget">
 							<div class="cta-info d-flex align-items-center">
 								<div class="info-icon d-flex justify-content-center align-items-center">
@@ -743,7 +1054,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="vt-footer-widget headline">
+					<div class="vt-footer-widget white_color headline">
 						<div class="social-widget">
 							<a href="#"><i class="fab fa-facebook-f"></i></a>
 							<a href="#"><i class="fab fa-instagram"></i></a>
@@ -752,11 +1063,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="vt-scrollup position-absolute">
+				<div class="vt-scrollup white_color position-absolute">
 					<a class="scrollup" href="#"><i class="far fa-arrow-up"></i></a>
 				</div>
 			</div> 
-			<div class="vt-footer-copyright d-flex">
+			<div class="vt-footer-copyright white_color d-flex">
 				<div class="vt-copyright-text">
 					©2024, <a href="#">Vertexify.</a> All Rights Reserved.
 				</div>
