--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
 					</div>
 				</div>
 				<div class="vt-faq-bottom mt-50 text-center pera-content">
-					<p>Don't see your question? Jump in our Slack!</p>
+					<p>Don't see your question? <span>Jump in our Slack!</span></p>
 					<div class="vt-btn mt-20 text-capitalize text-center">
 						<a href="#">Get in Touch</a>
 					</div>
