--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <!-- Start of Header section
 	============================================= --> 
-	<header id="vt-header" class="vt-header-section header_style_one">
+	<header id="vt-header" class="vt-header-section header_style_one txa_sticky_header">
 		<div class="header-top-area">
 			<div class="container">
 				<div class="header-top d-flex justify-content-between">
@@ -147,7 +147,7 @@
 
 <!-- Start of Banner section
 	============================================= -->
-	<section id="vt-banner" class="vt-banner-section item-view position-relative">
+	<section id="vt-banner" class="vt-banner-section txt_item_active position-relative">
 		<div class="vt-vertical-shape txt_item_active"></div>
 		<div class="vt-banner-shape">
 			<svg width="711" height="781" viewBox="0 0 711 781" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -175,13 +175,13 @@
 			<img src="assets/img/bg/hero-1.jpg" alt="">
 		</div>
 		<div class="container">
-			<div class="vt-banner-text headline pera-content">
+			<div class="vt-banner-text headline pera-content vt-text">
 				<div class="banner-slug">
 					Experience Creative Freedom
 				</div>
 				<h1 class="tx-split-text banner_title banner_title_line">Transforming Businesses with Expertise.</h1>
 				<p>Our consulting service drives growth, enhances efficiency, and transforms businesses for lasting success.</p>
-				<div class="vt-btn  btn-spin">
+				<div class="vt-btn  btn-spin wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 					<a class="btn-text-nina" href="#">Browse All Services</a>
 				</div>
 			</div>
