--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<h1 class="tx-split-text banner_title banner_title_line">Transforming Businesses with Expertise.</h1>
 				<p>Our consulting service drives growth, enhances efficiency, and transforms businesses for lasting success.</p>
 				<div class="vt-btn  btn-spin wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
-					<a class="btn-text-nina" href="#">Browse All Services</a>
+					<a  href="#">Browse All Services</a>
 				</div>
 			</div>
 		</div>
@@ -192,13 +192,14 @@
 
 <!-- Start of Service section
 	============================================= -->
-	<section id="vt-service" class="vt-service-section pt-120 pb-90">
+	<section id="vt-service" class="vt-service-section pt-120 pb-90 position-relative">
+		<span class="vt-service-shape position-absolute"><img src="assets/img/shape/logo_shape_3.svg" alt=""></span>
 		<div class="container">
 			<div class="vt-section-title headline pera-content">
-				<div class="subtitle">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 					Industries we serve
 				</div>
-				<h2 class="section_title">We offer expert consulting for strategic growth and operational excellence solutions.</h2>
+				<h2 class="section_title vt-title vt-title-ani">We offer expert consulting for strategic growth and operational excellence solutions.</h2>
 			</div>
 			<div class="vt-service-content pt-50">
 				<div class="row justify-content-center">
@@ -251,18 +252,18 @@
 		<div class="container">
 			<div class="vt-about-content d-flex justify-content-between align-items-center">
 				<div class="vt-about-text-wrap">
-					<div class="vt-section-title headline pera-content">
-						<div class="subtitle">
+					<div class="vt-section-title vt-text headline pera-content">
+						<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 							We're Vertexify Consulting
 						</div>
-						<h2 class="section_title">Comprehensive Business Consulting Services for Growth and Efficiency</h2>
+						<h2 class="section_title vt-title vt-title-ani">Comprehensive Business Consulting Services for Growth and Efficiency</h2>
 						<p>Our business consulting services aim to optimize operations and strategies, driving growth and ensuring sustained organizational success and development.</p>
 					</div>
-					<div class="vt-btn mt-30 text-capitalize">
-						<a href="#">Know About Us</a>
+					<div class="vt-btn mt-30 btn-spin wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
+						<a  href="#">Know About Us</a>
 					</div>
 				</div>
-				<div class="vt-about-counter position-relative">
+				<div class="vt-about-counter txt_item_active position-relative">
 					<div class="vt-counter-item headline pera-content d-flex align-items-end">
 						<h3><span class="counter">13</span><b>+</b></h3>
 						<p>Years of Experience</p>
@@ -339,7 +340,7 @@
 										<div class="subtitle">
 											We're Vertexify Consulting
 										</div>
-										<h2 class="section_title"><a href="#">Accelerate into the future.</a></h2>
+										<h2 class="section_title"><a class="vt-title" href="#">Accelerate into the future.</a></h2>
 									</div> 
 								</div>
 							</div>
@@ -356,7 +357,7 @@
 										<div class="subtitle">
 											We're Vertexify Consulting
 										</div>
-										<h2 class="section_title"><a href="#">Accelerate into the future.</a></h2>
+										<h2 class="section_title"><a class="vt-title" href="#">Accelerate into the future.</a></h2>
 									</div> 
 								</div>
 							</div>
@@ -373,7 +374,7 @@
 										<div class="subtitle">
 											We're Vertexify Consulting
 										</div>
-										<h2 class="section_title"><a href="#">Accelerate into the future.</a></h2>
+										<h2 class="section_title"><a class="vt-title" href="#">Accelerate into the future.</a></h2>
 									</div> 
 								</div>
 							</div>
@@ -390,7 +391,7 @@
 										<div class="subtitle">
 											We're Vertexify Consulting
 										</div>
-										<h2 class="section_title"><a href="#">Accelerate into the future.</a></h2>
+										<h2 class="section_title"><a class="vt-title" href="#">Accelerate into the future.</a></h2>
 									</div> 
 								</div>
 							</div>
@@ -407,8 +408,8 @@
 										<div class="subtitle">
 											We're Vertexify Consulting
 										</div>
-										<h2 class="section_title"><a href="#">Accelerate into the future.</a></h2>
-									</div> 
+										<h2 class="section_title"><a class="vt-title" href="#">Accelerate into the future.</a></h2>
+									</div>  
 								</div>
 							</div>
 						</div>
@@ -424,7 +425,7 @@
 										<div class="subtitle">
 											We're Vertexify Consulting
 										</div>
-										<h2 class="section_title"><a href="#">Accelerate into the future.</a></h2>
+										<h2 class="section_title"><a class="vt-title" href="#">Accelerate into the future.</a></h2>
 									</div> 
 								</div>
 							</div>
@@ -442,10 +443,10 @@
 	<section id="vt-client" class="vt-client-section pt-120 pb-120">
 		<div class="container">
 			<div class="vt-section-title headline text-center pera-content">
-				<div class="subtitle">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 					Our Corporate Clients
 				</div>
-				<h2 class="section_title">Satisfied clients from 170+ organisations in different fields</h2>
+				<h2 class="section_title vt-title vt-title-ani">Satisfied clients from 170+ organisations in different fields</h2>
 			</div>
 			<div class="vt-client-content d-flex flex-wrap">
 				<div class="vt-client-item d-flex justify-content-center align-items-center position-relative">
@@ -489,7 +490,7 @@
 					<img class="img_2 position-absolute" src="assets/img/partner/sp8.1.png" alt="">
 				</div>
 			</div>
-			<div class="vt-btn ver_2 text-center mt-40 text-capitalize">
+			<div class="vt-btn ver_2 btn-spin text-center mt-40">
 				<a href="#">Browse All Clients</a>
 			</div>
 		</div>
@@ -506,8 +507,8 @@
 			<span></span>
 		</div>
 		<div class="vt-service-content  pt-190 pb-150 position-relative">
-			<div class="vt-service-bg position-absolute">
-				<img src="assets/img/bg/ser-bg.jpg" alt="">
+			<div class="vt-service-bg txt_item_active log-image-appear1 position-absolute">
+				<img class="log-img-rvl_1" src="assets/img/bg/ser-bg.jpg" alt="">
 				<div class="vt-vertical-shape-2 txt_item_active">
 					<span></span>
 					<span></span>
@@ -516,14 +517,14 @@
 			</div>
 			<div class="container">
 				<div class="vt-service-text-wrap-3">
-					<div class="vt-section-title headline pera-content">
-						<div class="subtitle">
+					<div class="vt-section-title vt-text headline pera-content">
+						<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 							We're Vertexify Consulting
 						</div>
-						<h2 class="section_title">Driving Growth Through Expert Consulting Solutions</h2>
+						<h2 class="section_title vt-title vt-title-ani">Driving Growth Through Expert Consulting Solutions</h2>
 						<p>Our consulting services drive growth, optimize operations, and ensure strategic business success.</p>
 					</div>
-					<div class="vt-btn mt-30 text-capitalize">
+					<div class="vt-btn mt-30 btn-spin">
 						<a href="#">Know About Us</a>
 					</div>
 				</div>
@@ -649,12 +650,12 @@
 	============================================= -->
 	<section id="vt-testimonial" class="vt-testimonial-section pt-120 pb-120">
 		<div class="vt-section-title headline text-center pera-content">
-			<div class="subtitle">
+			<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 				Client Testimonials
 			</div>
-			<h2 class="section_title">Clients Share Their Success Stories</h2>
+			<h2 class="section_title vt-title vt-title-ani">Clients Share Their Success Stories</h2>
 		</div>
-		<div class="vt-testimonial-content mt-50 position-relative">
+		<div class="vt-testimonial-content appear_top mt-50 position-relative">
 			<div class="vt-testimonial-slider swiper-container">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
@@ -809,10 +810,10 @@
 			</div>
 			<div class="vt-why-choose-text">
 				<div class="vt-section-title headline pera-content">
-					<div class="subtitle">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 						We're Vertexify Consulting
 					</div>
-					<h2 class="section_title">Comprehensive Business Consulting Services for Growth and Efficiency</h2>
+					<h2 class="section_title vt-title vt-title-ani">Comprehensive Business Consulting Services for Growth and Efficiency</h2>
 				</div>
 				<div class="vt-why-choose-ft-item-area">
 					<div class="vt-why-choose-ft-item d-flex">
