--- a/index.html
+++ b/index.html
@@ -800,8 +800,8 @@
 	============================================= -->
 	<section id="vt-why-choose" class="vt-why-choose-section pb-120">
 		<div class="vt-why-choose-content d-flex align-items-center">
-			<div class="vt-why-choose-img position-relative">
-				<img src="assets/img/about/wc1.jpg" alt="">
+			<div class="vt-why-choose-img log-image-appear1 position-relative">
+				<img class="log-img-rvl_1" src="assets/img/about/wc1.jpg" alt="">
 				<div class="vt-vertical-shape-2 txt_item_active">
 					<span></span>
 					<span></span>
@@ -816,7 +816,7 @@
 					<h2 class="section_title vt-title vt-title-ani">Comprehensive Business Consulting Services for Growth and Efficiency</h2>
 				</div>
 				<div class="vt-why-choose-ft-item-area">
-					<div class="vt-why-choose-ft-item d-flex">
+					<div class="vt-why-choose-ft-item d-flex top_view">
 						<div class="item-icon">
 							<svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M24 4L4 14L24 24L44 14L24 4Z" stroke="#101010" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -830,7 +830,7 @@
 							<p>We offer strategic planning to drive sustainable growth, operational efficiency, and long-term success.</p>
 						</div>
 					</div>
-					<div class="vt-why-choose-ft-item d-flex">
+					<div class="vt-why-choose-ft-item d-flex top_view">
 						<div class="item-icon">
 							<svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M40 14H8C5.79086 14 4 15.7909 4 18V38C4 40.2091 5.79086 42 8 42H40C42.2091 42 44 40.2091 44 38V18C44 15.7909 42.2091 14 40 14Z" stroke="#101010" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -842,7 +842,7 @@
 							<p>We optimize operations to enhance efficiency, reduce costs, and improve overall performance.</p>
 						</div>
 					</div>
-					<div class="vt-why-choose-ft-item d-flex">
+					<div class="vt-why-choose-ft-item d-flex top_view">
 						<div class="item-icon">
 							<svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<g clip-path="url(#clip0_267_3850)">
@@ -862,7 +862,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="vt-btn mt-45 text-capitalize">
+				<div class="vt-btn btn-spin mt-45">
 					<a href="#">Schedule a Consultation</a>
 				</div>
 			</div>
@@ -881,10 +881,10 @@
 		</div>
 		<div class="container">
 			<div class="vt-section-title headline pera-content">
-				<div class="subtitle">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 					News & Blogs
 				</div>
-				<h2 class="section_title">Press Releases Drive Success</h2>
+				<h2 class="section_title vt-title vt-title-ani">Press Releases Drive Success</h2>
 			</div>
 			<div class="vt-blog-content pt-50 justify-content-center">
 				<div class="row justify-content-center">
@@ -931,7 +931,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="vt-btn mt-15 text-capitalize text-center">
+				<div class="vt-btn btn-spin mt-15  text-center">
 					<a href="#">Browse All News</a>
 				</div>
 			</div>
@@ -945,10 +945,10 @@
 	<section id="vt-faq" class="vt-faq-section pt-120 pb-200 position-relative">
 		<div class="container">
 			<div class="vt-section-title headline text-center pera-content">
-				<div class="subtitle">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 					Frequently Asked Questions
 				</div>
-				<h2 class="section_title">Answers to Common Corporate Business Questions</h2>
+				<h2 class="section_title vt-title vt-title-ani">Answers to Common Corporate Business Questions</h2>
 			</div>
 			<div class="vt-faq-content">
 				<div class="vt-faq-item-area">
@@ -1027,7 +1027,7 @@
 				</div>
 				<div class="vt-faq-bottom mt-50 text-center pera-content">
 					<p>Don't see your question? <span>Jump in our Slack!</span></p>
-					<div class="vt-btn mt-20 text-capitalize text-center">
+					<div class="vt-btn mt-20 btn-spin text-center">
 						<a href="#">Get in Touch</a>
 					</div>
 				</div>
